# rust-cloud-run-service

./: Cargo.toml
src/: main.rs  telemetry.rs
src/telemetry/: api.rs  config.rs  error.rs  mod.rs  resource.rs  trace.rs
src/telemetry/default/: mod.rs  provider.rs
src/telemetry/gcp/: auth.rs  config.rs  exporter.rs  mod.rs  resource.rs
