[package]
name = "rust-cloud-run-service"
version = "0.1.0"
edition = "2021"

[features]
default = ["telemetry-gcp"]
telemetry-gcp = ["dep:gcp_auth"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_31"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tls", "tls-roots"] }
tracing-opentelemetry = { version = "0.32.1" }
tonic = "0.14"

# Optional: GCP support
gcp_auth = { version = "0.12", optional = true }
